# voxam

./: .gitignore  AUDIO_BREAKING_FIX.md  CLAUDE.md  ENV_SETUP_GUIDE.md  FRONTEND_AUDIO_FIX.md  PRICING.md  PROD.md  TECH_DEBT.md  TODO.md
marketing/: CLAUDE.md  (+2 more)
python/: .gitignore  COPILOTKIT_CORRECT_SETUP.md  GRAPHRAG_IMPLEMENTATION.md  INGESTION_CAPABILITIES.md  ISSUES.md  SCHEMA_REFERENCE.md  __init__.py  api.py  celery_app.py  credits.py  gemini_ingestion.py  ingestion_workflow.py  llama_ingestion.py  lp_agent.py  pyproject.toml  qp_agent.py  r2.py  retrieval.py  security.py  setup_vector_index.py  test_auth_endpoints.py  test_cerebras_llm.py  test_chat_models.py  test_extraction_only.py  test_full_ingestion.py  test_gemini_extraction.py  test_gemini_tts.py  test_google_cloud_tts.py  test_gpt_oss_questions.py  test_hybrid_extraction.py  test_inworld_latency.py  test_kokoro_tts.py  test_llama_ingestion.py  test_llama_scout.py  test_llm_latency.py  test_llm_quality.py  test_neural2_indian.py  test_olmocr.py  test_openai_tts.py  test_openai_tts_stream.py  (+9 more)
python/agents/: EXAM_AGENT_ARCHITECTURE.md  chat_agent.py  chat_agent_backup_copilotkit.py  chat_tools.py  correction_agent.py  exam_agent.py  learn_agent.py  learn_session_summary.py  realtime.py  realtime_base.py  realtime_exam.py  realtime_learn.py  realtime_learn_streaming.py  realtime_old.py  test_exam_agent.py  test_exam_agent_behavior.py  test_exam_agent_integration.py  test_latency.py  test_learn_agent_conversational.py  test_learn_tool_calling.py
python/agents/rules/: edge_cases.md  exam_conduct.md  learn_edge_cases.md  math_formatting.md  question_presentation.md  response_style.md  source_citation.md  teaching_style.md  tool_selection.md
python/evaluation/: README.md  __init__.py  compare_models.py  current_approach_evaluate.py  deepinfra_evaluate.py  groq_evaluate.py  local_evaluate.py  ocr_comparison.py  replicate_evaluate.py  runpod_evaluate.py  test_encoding_check.py  test_extraction_pipeline.py  test_full_pipeline.py
python/evaluation/results/: chemistry_content_blocks.json  current_gemini_biology_preview.md  current_gemini_chemistry_preview.md  current_gemini_cs_preview.md  current_gemini_physics_preview.md  current_gemini_summary.json  current_pymupdf_biology_preview.md  current_pymupdf_chemistry_preview.md  current_pymupdf_cs_preview.md  current_pymupdf_physics_preview.md  current_pymupdf_summary.json  deepinfra_olmocr2_biology_preview.md  deepinfra_olmocr2_chemistry_preview.md  deepinfra_olmocr2_cs_preview.md  deepinfra_olmocr2_physics_preview.md  deepinfra_olmocr2_summary.json  extraction_pipeline_test.json  full_pipeline_test.json  granite-docling_biology_preview.md  (+35 more)
python/lib/: __init__.py  content_detector.py  encoding_check.py  math_to_speech.py  supabase_client.py  text_chunker.py  tts_queue.py  voice_optimizer.py
python/tasks/: __init__.py  correction.py  gemini_ingestion.py  ingestion.py
python/tests/: conftest.py  factories.py  test_chat_agent.py  test_exam_multistep.py  test_ingestion_images.py  test_intermediate_livekit.py  test_intermediate_messages.py  test_tts_race_conditions.py
(+170 files in other folders)
